test/unittest/error/tst.DTRACEFLT_DIVZERO.mod.r

-- @@stderr --
dtrace: error in dt_clause_4 for probe ID 1 (dtrace:::BEGIN): divide-by-zero at BPF pc NNN
